ros2_home_auto/log/build_2024-03-28_14-57-38/led_control/stdout_stderr.log
running egg_info
writing ../../build/led_control/led_control.egg-info/PKG-INFO
writing dependency_links to ../../build/led_control/led_control.egg-info/dependency_links.txt
writing entry points to ../../build/led_control/led_control.egg-info/entry_points.txt
writing requirements to ../../build/led_control/led_control.egg-info/requires.txt
writing top-level names to ../../build/led_control/led_control.egg-info/top_level.txt
reading manifest file '../../build/led_control/led_control.egg-info/SOURCES.txt'
adding license file 'LICENSE'
writing manifest file '../../build/led_control/led_control.egg-info/SOURCES.txt'
running build
running build_py
copying led_control/led_control_server.py -> /home/jan/dev/ros2_home_auto/build/led_control/build/lib/led_control
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/jan/dev/ros2_home_auto/build/led_control/build/lib/led_control/led_control_server.py -> /home/jan/dev/ros2_home_auto/install/led_control/lib/python3.10/site-packages/led_control
byte-compiling /home/jan/dev/ros2_home_auto/install/led_control/lib/python3.10/site-packages/led_control/led_control_server.py to led_control_server.cpython-310.pyc
  File "/home/jan/dev/ros2_home_auto/install/led_control/lib/python3.10/site-packages/led_control/led_control_server.py", line 36
    self.get_logger().info(f"{self.get_parameter("led_count").get_parameter_value().integer_value}; {self.get_parameter("led_pin").get_parameter_value().integer_value}")
                                                  ^^^^^^^^^
SyntaxError: f-string: unmatched '('

running install_data
running install_egg_info
removing '/home/jan/dev/ros2_home_auto/install/led_control/lib/python3.10/site-packages/led_control-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/led_control/led_control.egg-info to /home/jan/dev/ros2_home_auto/install/led_control/lib/python3.10/site-packages/led_control-0.0.0-py3.10.egg-info
running install_scripts
Installing led_control_server script to /home/jan/dev/ros2_home_auto/install/led_control/lib/led_control
writing list of installed files to '/home/jan/dev/ros2_home_auto/build/led_control/install.log'
